k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: retailstore-dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: retailstore-prod
